--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "forcast-finnese",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://stefanpython.github.io/forcast-Finnese",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
